import sass files

--- a/ezoneproject/style.scss
+++ b/ezoneproject/style.scss
@@ -1,8 +1,6 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
-}
+@import "scss/base/reset";
+@import "scss/base/typography";
+@import "scss/carousel";
+@import "scss/components";
+@import "scss/layout";
+@import "scss/popup";
