--- a/ezoneproject/scss/_layout.scss
+++ b/ezoneproject/scss/_layout.scss
@@ -12,20 +12,22 @@ nav {
 }
 
 .burger-menu {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: 0 0;
-  border: none;
-  display: flex;
+  display: block;
   position: relative;
-  width: 1rem;
-  height: 1.25rem;
-  padding: 0;
-  margin: 0;
-  cursor: pointer;
-  z-index: 2;
-  align-items: center;
+
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.burger-menu span {
+  display: block;
+  width: 1.6rem;
+  height: 2px;
+  margin-bottom: 6px;
+  position: relative;
+  background: #cdcdcd;
+  border-radius: 1px;
 }
 
 body {
