--- a/ezoneproject/scss/base/_typography.scss
+++ b/ezoneproject/scss/base/_typography.scss
@@ -1,3 +1,5 @@
+@use "colors";
+
 @font-face {
   font-family: sharpiro-bold;
   src: url("../../fonts/sharpiro-bold.ttf");
@@ -10,14 +12,34 @@
 
 @font-face {
   font-family: uniform-pro-con-black;
-  src: url(../../fonts/uniform-pro-con-black.ttf);
+  src: url("../../fonts/uniform-pro-con-black.ttf");
 }
 @font-face {
   font-family: uniform-pro-con-medium;
-  src: url(../../fonts/uniform-pro-con-medium.ttf);
+  src: url("../../fonts/uniform-pro-con-medium.ttf");
 }
 
 h1 {
   font-family: sharpiro-bold;
   font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  font-family: shapiro-regular;
+  font-weight: regular;
+}
+
+.footer-links {
+  a {
+    font-size: 0.9rem;
+    color: colors.$white;
+  }
+}
+
+.footer-extra-info {
+  a {
+    font-size: 0.7rem;
+    color: colors.$mediumgrey;
+  }
 }
