--- a/ezoneproject/scss/_layout.scss
+++ b/ezoneproject/scss/_layout.scss
@@ -54,3 +54,9 @@ footer {
     padding-bottom: 0.4rem;
   }
 }
+
+section {
+  padding: 1rem;
+  border-top: 1px solid hsla(0, 0%, 100%, 0.11765);
+  border-bottom: 1px solid hsla(0, 0%, 100%, 0.11765);
+}
