--- a/ezoneproject/scss/base/_reset.scss
+++ b/ezoneproject/scss/base/_reset.scss
@@ -17,7 +17,7 @@ body {
   background-color: colors.$grey;
 }
 h1 {
-  font-size: 4.375rem;
+  font-size: 3rem;
   font-family: uniform-pro-con-black, sans-serif;
   letter-spacing: 0.05em;
   color: colors.$orangelight;
@@ -42,17 +42,39 @@ h1 {
   position: relative;
   flex-direction: column;
   z-index: -1;
+  margin-top: 4rem;
 }
 p {
-  font-size: 0.8125rem;
+  font-family: uniform-pro-con, sans-serif;
+  font-size: 1rem;
   display: block;
   line-height: 150%;
   text-align: center;
   color: colors.$orangelight;
   transition: all 0.4s ease-in;
-  max-width: 38.125rem;
+  max-width: 45ch;
   margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+  margin-top: 3rem;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-family: uniform-pro-con, sans-serif;
+  color: colors.$white;
+  padding: 1.2rem;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+button {
+  color: white;
+  background-color: transparent;
+  border: 0.16rem solid white;
+  border-radius: 40px;
+  font-family: uniform-pro-con, sans-serif;
+  padding: 0.8rem;
+  width: 10rem;
 }
