--- a/ezoneproject/scss/_carousel.scss
+++ b/ezoneproject/scss/_carousel.scss
@@ -2,14 +2,14 @@
 
 #carousel {
   display: flex;
+  width: 80rem;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
 #carousel {
   .area {
-    width: 14rem;
-    height: 19rem;
+    width: 12rem;
+    height: 16rem;
     background-color: colors.$blue;
     margin: 1rem;
     border-radius: 10px;
@@ -19,23 +19,25 @@
 
   .areaheader {
     text-align: left;
-    margin-top: 1.4rem;
+    margin-top: 0.4rem;
   }
+
   .areadescription {
     text-align: left;
-    padding: 1.06rem;
+    padding: 0rem 1rem 1rem 1rem;
     margin-top: 0;
     letter-spacing: 0.001rem;
     word-spacing: 0.01px;
     line-height: 1.6rem;
     color: colors.$white;
+    font-size: 0.8rem;
   }
 
   button {
     margin: 0;
     position: absolute;
-    top: 80%;
-    transform: translate(18%, -50%);
+    top: 85%;
+    transform: translate(9%, -50%);
   }
   .area1 {
     background-color: colors.$bluelight;
