--- a/ezoneproject/scss/_layout.scss
+++ b/ezoneproject/scss/_layout.scss
@@ -59,6 +59,9 @@ section {
   padding: 1rem;
   border-top: 1px solid hsla(0, 0%, 100%, 0.11765);
   border-bottom: 1px solid hsla(0, 0%, 100%, 0.11765);
+  overflow-x: auto;
+  scroll-snap-type: inline proximity;
+  scrollbar-width: thin;
 }
 
 article {
