--- a/ezoneproject/scss/base/_reset.scss
+++ b/ezoneproject/scss/base/_reset.scss
@@ -70,11 +70,12 @@ h2 {
 }
 
 button {
+  font-size: 0.9em;
   color: white;
   background-color: transparent;
   border: 0.16rem solid white;
   border-radius: 40px;
   font-family: uniform-pro-con, sans-serif;
-  padding: 0.8rem;
-  width: 10rem;
+  padding: 0.4rem;
+  width: 7rem;
 }
