--- a/ezoneproject/scss/_carousel.scss
+++ b/ezoneproject/scss/_carousel.scss
@@ -9,7 +9,7 @@
 #carousel {
   .area {
     width: 12rem;
-    height: 16rem;
+    height: 15rem;
     background-color: colors.$blue;
     margin: 1rem;
     border-radius: 10px;
@@ -18,8 +18,9 @@
   }
 
   .areaheader {
+    font-size: 1.3em;
     text-align: left;
-    margin-top: 0.4rem;
+    margin-top: 0rem;
   }
 
   .areadescription {
@@ -28,16 +29,17 @@
     margin-top: 0;
     letter-spacing: 0.001rem;
     word-spacing: 0.01px;
-    line-height: 1.6rem;
+    line-height: 1.4rem;
     color: colors.$white;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
   }
 
   button {
-    margin: 0;
     position: absolute;
-    top: 85%;
-    transform: translate(9%, -50%);
+    left: 0;
+    right: 0;
+    top: 72%;
+    margin: auto;
   }
   .area1 {
     background-color: colors.$bluelight;
