carusel button hover state

--- a/ezoneproject/scss/base/_reset.scss
+++ b/ezoneproject/scss/base/_reset.scss
@@ -82,6 +82,7 @@ button {
 
 #carousel {
   button:hover {
-    color: colors.$grey;
+    background-color: colors.$navbackground;
+    transition: ease-out 0.2s;
   }
 }
