--- a/ezoneproject/scss/_popup.scss
+++ b/ezoneproject/scss/_popup.scss
@@ -1,13 +1,26 @@
 @use "base/colors.scss";
 
 .popup {
+  position: fixed;
+  z-index: 99;
+  bottom: 0%;
+  width: 100%;
   background-color: colors.$orangelight;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: moveUp 1s 1;
 }
+@keyframes moveUp {
+  from {
+    transform: translateY(100%);
+  }
 
+  to {
+    transform: translateY(0%);
+  }
+}
 .popup {
   h2 {
     font-size: 1.2rem;
@@ -49,4 +62,13 @@
   .hidden {
     display: none;
   }
+  p {
+    color: black;
+    font-size: 0.8rem;
+    position: fixed;
+    bottom: 1.8rem;
+  }
+}
+.hidden {
+  display: none;
 }
