--- a/ezoneproject/scss/_popup.scss
+++ b/ezoneproject/scss/_popup.scss
@@ -34,7 +34,6 @@
 
   label[for="email"] {
     font-size: 0.8rem;
-    padding-bottom: 1em;
     color: colors.$grey;
   }
 
@@ -47,6 +46,22 @@
     flex-direction: column;
   }
   .hidden {
-    display: none;
+    visibility: hidden;
+  }
+
+  p {
+    padding: 0;
+    margin: 0;
+    line-height: 1rem;
+    font-size: 0.8rem;
+    padding-bottom: 0.1rem;
+    max-width: 100ch;
+  }
+  .error {
+    text-align: left;
+  }
+
+  .yay {
+    padding-top: 1em;
   }
 }
