--- a/ezoneproject/scss/_popup.scss
+++ b/ezoneproject/scss/_popup.scss
@@ -12,10 +12,10 @@
   align-items: center;
 }
 .moveup {
-  animation: moveUp 1s 1;
+  animation: moveUp 0.8s 1;
 }
 .movedown {
-  animation: moveDown 1s 1;
+  animation: moveDown 0.8s 1;
 }
 @keyframes moveUp {
   from {
@@ -62,6 +62,7 @@
   label[for="email"] {
     font-size: 0.8rem;
     color: colors.$grey;
+    padding-bottom: 0.2rem;
   }
 
   .email-2 {
@@ -88,16 +89,29 @@
     text-align: left;
   }
 
-  .yay {
-    padding-top: 1em;
-  }
   p {
     color: black;
     font-size: 0.8rem;
-    position: fixed;
     bottom: 1.8rem;
+  }
+
+  .yay {
+    font-size: 1.2;
+    text-align: center;
+    color: colors.$green;
+    padding-top: 1rem;
+    font-weight: bold;
+    transition: ease-out 0.1s;
+  }
+  .x {
+    font-size: 1.5rem;
+    position: absolute;
+    top: 0.8rem;
+    right: 1.5rem;
+    color: colors.$mediumgrey;
+    cursor: pointer;
   }
 }
 .hidden {
-  display: none;
+  visibility: hidden;
 }
