--- a/ezoneproject/scss/_layout.scss
+++ b/ezoneproject/scss/_layout.scss
@@ -104,6 +104,16 @@ article {
     bottom: 1em;
     left: 1em;
   }
+
+  h2 {
+    text-transform: capitalize;
+    font-size: 1rem;
+    text-align: left;
+    position: absolute;
+    top: 1rem;
+    left: 0.2rem;
+    font-weight: 600;
+  }
 }
 
 @media only screen and (min-width: 600px) {
